--- a/app/javascript/stylesheets/_variables-dark.scss
+++ b/app/javascript/stylesheets/_variables-dark.scss
@@ -1,15 +1,7 @@
 @include color-mode(dark) {
-  html, body, #app {
-    background-color: var(--bs-body-bg);
-  }
-
-  .text-credit {
-    color: $mintgreen-500 !important;
-  }
-
-  .text-debit {
-    color: $red !important;
-  }
+  --background-color: var(--bs-body-bg);
+  --text-credit-color: #{$mintgreen-500};
+  --text-debit-color: #{$red};
 
   // Cards
 
@@ -24,7 +16,7 @@
   }
 
   .nav {
-    --bs-nav-link-color: $gray-100;
-    --bs-nav-link-hover-color: $gray-300;
+    --bs-nav-link-color: #{$gray-100};
+    --bs-nav-link-hover-color: #{$gray-400};
   }
 }
